<resources>
    <string name="app_name">Hermes</string>

    <!--********** Action Bar *****************-->
    <string name="sign_out">Sign Out</string>
    <string name="check_in">Check In</string>

    <!-- ************  Friends ********************-->
    <string name="search_friends">Search Friends</string>
    <string name="friends_no_friends">You don\'t have any friends yet.</string>

    <!-- ************  Profile *********************-->
    <string name="profile_send">Send Friend Request</string>
    <string name="profile_sent">Friend Request Sent</string>
    <string name="profile_friends">Currently Friends</string>
    <!--********** Facebook Login Essentials ************-->
    <string name="facebook_app_id">141191076393885</string>
    <string name="fb_login_protocol_scheme">fb141191076393885</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- ********* Check IN *******************************-->
    <string name="type_place_hint">Place Name</string>
    <string name="check_in_submit">Check In</string>
    <string name="check_out_submit">Check Out</string>

    <!-- ********* Transactions Activity ************ -->
    <string name="trans_frag_add_button_tag">Add</string>

    <!-- ********* ToAdd class ****************** -->
    <string name="toAdd_with_tag">Between you and : </string>
    <string name="toAdd_amount_tag">Amount : </string>
    <string name="toAdd_WithWhom_hint">Name or email address</string>
    <string name="toAdd_Description_text_tag">Description : </string>
    <string-array name="toAdd_owing_list">
        <item>I owe him</item>
        <item>He owes me</item>
        <item>Split Equally</item>
    </string-array>
    <string name="toAdd_submit_button_tag">Submit</string>


</resources>
